Fix dropdown menu shifting to another line on small screens

--- a/InnoClubs/static/css/base.css
+++ b/InnoClubs/static/css/base.css
@@ -63,11 +63,8 @@ header #leftHeader span{
 }
 
 header #rightHeader{
-    width: 40%;
-    float: right;
     text-align: right;
     font-size: 1.5em;
-    min-width: 220px;
 }
 
 .dropdownMenu{
